# test_q

./: .dockerignore  .env.template  .gitignore  README.md  db.json  docker-compose.yml  pyproject.toml  requirements.txt
config/: .env.template
server/: urls.py
server/apps/core/: admin.py  apps.py  models.py  views.py
server/apps/core/migrations/: 0001_initial.py
server/apps/core/templates/: base.html  test.html
server/settings/: __init__.py
server/settings/components/: caches.py  common.py  debug.py  logging.py
server/settings/environments/: development.py  local.py.template  production.py
